feat: configure Nginx proxy for backend API
- Set up Nginx to proxy API requests to backend.
- Added BACKEND_API_URL env var for flexible proxy config.
- Updated docker-compose files for dev and prod environments.
- Removed the `config.js` file as it's no longer needed.
- Updated all API endpoints to use relative paths instead of the Config
object.
- Modified the Docker configuration to remove unnecessary ports and
environment variables.
- Commented CORS configuration in SecurityConfig as it's no longer
needed.
- Removed redundant code and cleaned up unused variables in the frontend
 JavaScript files.